# quake-vector

./: Cargo.toml  README.md  ui.html  ui2.html
crates/adaptation/: Cargo.toml
crates/adaptation/src/: base.rs  engine.rs  ground_truth.rs  lib.rs  lora.rs  micro.rs  probation.rs  ruvector_adapter.rs
crates/alert/: Cargo.toml
crates/alert/src/: builder.rs  consensus.rs  cooldown.rs  decision.rs  engine.rs  gpio.rs  lib.rs  log.rs  thresholds.rs
crates/container/: Cargo.toml
crates/container/src/: boot.rs  config.rs  degradation.rs  lib.rs  resource.rs  runtime.rs  thread_health.rs  watchdog.rs
crates/embedding/: Cargo.toml
crates/embedding/src/: arrival.rs  envelope.rs  fft_features.rs  lib.rs  phase_coherence.rs  pipeline.rs  position.rs  quantization.rs
crates/ingestion/: Cargo.toml
crates/ingestion/src/: classifier.rs  discovery.rs  health.rs  lib.rs  ring_buffer.rs  sensor.rs  simulator.rs  stream.rs
crates/learning/: Cargo.toml
crates/learning/src/: gat.rs  history.rs  learner.rs  lib.rs  model.rs  ruvector_adapter.rs  subgraph.rs  transition.rs
crates/network/: Cargo.toml
crates/network/src/: dashboard.rs  lib.rs  mesh.rs  message.rs  peer.rs  queue.rs  service.rs  upstream.rs
crates/persistence/: Cargo.toml
crates/persistence/src/: checkpoint.rs  crypto.rs  graph_serializer.rs  lib.rs  payload.rs  recovery.rs  rvf_adapter.rs  sona_serializer.rs  tests.rs  wal_entry.rs  wal_reader.rs  wal_writer.rs  wear.rs
crates/types/: Cargo.toml
crates/types/src/: lib.rs
crates/vector-store/: Cargo.toml
crates/vector-store/src/: config.rs  distance.rs  graph.rs  lib.rs  node.rs  ruvector_adapter.rs  tier.rs  traits.rs
examples/: bench.rs
src/: main.rs
tests/: e2e_simulation.rs  integration_test.rs
