[workspace]
resolver = "2"
members = [
    ".",
    "crates/types",
    "crates/ingestion",
    "crates/embedding",
    "crates/vector-store",
    "crates/learning",
    "crates/adaptation",
    "crates/alert",
    "crates/persistence",
    "crates/container",
    "crates/network",
]

[package]
name = "quake-vector"
version = "0.1.0"
edition = "2021"

[dependencies]
quake-vector-types = { path = "crates/types" }
quake-vector-ingestion = { path = "crates/ingestion" }
quake-vector-embedding = { path = "crates/embedding" }
quake-vector-store = { path = "crates/vector-store" }
quake-vector-learning = { path = "crates/learning" }
quake-vector-alert = { path = "crates/alert" }
quake-vector-persistence = { path = "crates/persistence" }
quake-vector-container = { path = "crates/container" }
quake-vector-network = { path = "crates/network" }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4", features = ["derive"] }
signal-hook = "0.3"
libc = "0.2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
