[package]
name = "quake-vector-alert"
version = "0.1.0"
edition = "2021"

[dependencies]
quake-vector-types = { path = "../types" }
quake-vector-persistence = { path = "../persistence" }
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"
ed25519-dalek = { version = "2", features = ["rand_core"] }
