[package]
name = "quake-vector-learning"
version = "0.1.0"
edition = "2021"

[features]
default = []
ruvector = ["ruvector-gnn", "ruvector-temporal-tensor", "ruv-fann"]

[dependencies]
quake-vector-types = { path = "../types" }
quake-vector-store = { path = "../vector-store" }
tracing = "0.1"
ruvector-gnn = { version = "2.0.5", optional = true }
ruvector-temporal-tensor = { version = "2.0.4", optional = true }
ruv-fann = { version = "0.2.0", optional = true }
