[package]
name = "quake-vector-network"
version = "0.1.0"
edition = "2021"

[dependencies]
quake-vector-types = { path = "../types" }
quake-vector-persistence = { path = "../persistence" }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"
uuid = { version = "1", features = ["v4"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
axum = "0.7"
tower = { version = "0.5", features = ["util"] }
