[package]
name = "quake-vector-persistence"
version = "0.1.0"
edition = "2021"

[features]
default = []
rvf = ["rvf-runtime", "rvf-types", "rvf-wire", "rvf-crypto"]

[dependencies]
quake-vector-types = { path = "../types" }
quake-vector-store = { path = "../vector-store" }
quake-vector-adaptation = { path = "../adaptation" }
tracing = "0.1"
crc32fast = "1"
ed25519-dalek = { version = "2", features = ["rand_core"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"
rand = "0.8"
rvf-runtime = { version = "0.2.0", optional = true }
rvf-types = { version = "0.2.0", optional = true }
rvf-wire = { version = "0.1.0", optional = true }
rvf-crypto = { version = "0.2.0", optional = true }
